# alinker

./: CMakeLists.txt  README.md  test.c
include/alinker/: ba.h  bionic_tls.h  dlfcn.h  hook.h  linker.h  linker_debug.h  linker_format.h
src/: ba.c  debugger.c  dlfcn.c  hook.c  linker.c  linker_format.c  rt.c
